Ajout des entités acteur, realisateur et categorie

--- a/CineQuebec.Windows/View/FilmsControl.xaml
+++ b/CineQuebec.Windows/View/FilmsControl.xaml
@@ -9,38 +9,16 @@
       xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
        xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n">
 
-
-
-    <Grid Background="White" >
-
-
-        <Grid  ScrollViewer.CanContentScroll="True" >
-            <ItemsControl ItemsSource="{Binding }">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <WrapPanel  Orientation="Horizontal" HorizontalAlignment="Center"/>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Border BorderBrush="White" BorderThickness="5" Margin="20 0" CornerRadius="15">
-                            <md:Card  UniformCornerRadius="15" BorderThickness="5" BorderBrush="White" Width="110" Height="130" Background="#F6F6F8">
-                                <StackPanel Margin="10" HorizontalAlignment="Center">
-                                    <md:PackIcon Kind="User" Foreground="#29A3EC" HorizontalAlignment="Center" Height="30" Width="30"/>
-                                    <TextBlock FontWeight="SemiBold" FontSize="16" Text="{Binding FrenchTitle}" Margin="0 10 0 0"/>
-                                    <TextBlock  FontSize="12" Text="{Binding OriginalTitle}" Margin="0 10 0 0"/>
-                                    <md:PackIcon Kind="EllipsisHorizontal" HorizontalAlignment="Right"/>
-                                </StackPanel>
-
-                            </md:Card>
-                        </Border>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-
-
-        </Grid>
-
-
+    <Grid Background="White">
+        <DataGrid ItemsSource="{Binding }" AutoGenerateColumns="False" CanUserAddRows="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Original Title" Binding="{Binding OriginalTitle}" />
+                <DataGridTextColumn Header="French Title" Binding="{Binding FrenchTitle}" />
+                <DataGridTextColumn Header="Duration" Binding="{Binding Duration}" />
+                <DataGridTextColumn Header="Release Date" Binding="{Binding InternationalReleaseDate}" />
+                <DataGridTextColumn Header="Rating" Binding="{Binding Rating}" />
+                <DataGridTextColumn Header="Original Language" Binding="{Binding OriginalLanguage}" />
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </UserControl>
