--- a/CineQuebec.Windows/View/UsersControl.xaml
+++ b/CineQuebec.Windows/View/UsersControl.xaml
@@ -5,13 +5,14 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CineQuebec.Windows.View"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="650" d:DesignWidth="772"
       xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
-       xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n">
+       xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n"
+              Style="{StaticResource Page_Style}">
     
 
 
-    <Grid Background="White" >
+    <Grid  >
 
 
         <Grid  ScrollViewer.CanContentScroll="True" >
@@ -69,8 +70,8 @@
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <Border BorderBrush="White" BorderThickness="5" Margin="20 0" CornerRadius="15">
-                                <md:Card  UniformCornerRadius="15" BorderThickness="5" BorderBrush="White" Width="110" Height="130" Background="#F6F6F8">
-                                    <StackPanel Margin="10" HorizontalAlignment="Center">
+                                <md:Card  UniformCornerRadius="15" BorderThickness="5" BorderBrush="White" Width="300" Height="200" Background="#F6F6F8">
+                                    <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
                                         <md:PackIcon Kind="User" Foreground="#29A3EC" HorizontalAlignment="Center" Height="30" Width="30"/>
                                         <TextBlock FontWeight="SemiBold" FontSize="16" Text="{Binding Username}" Margin="0 10 0 0"/>
                                         <TextBlock  FontSize="12" Text="{Binding DateAdhesion}" Margin="0 10 0 0"/>
