--- a/CineQuebec.Windows/View/NavWindows.xaml
+++ b/CineQuebec.Windows/View/NavWindows.xaml
@@ -74,7 +74,7 @@
 
         </Grid>
 
-        <Grid HorizontalAlignment="Left" Width="772" Margin="228,0,0,0">
+        <Grid HorizontalAlignment="Right" >
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*"/>
@@ -92,8 +92,8 @@
 
             <ContentControl x:Name="mainContentControl" 
                  Grid.Row="1" 
-                 HorizontalAlignment="Center" 
-                 VerticalAlignment="Center" 
+                 HorizontalAlignment="Right" 
+                 VerticalAlignment="Center" Margin="0,0,346,0" 
                  />
         </Grid>
     </Grid>
