--- a/CineQuebec.Windows/App.xaml
+++ b/CineQuebec.Windows/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CineQuebec.Windows"
-             StartupUri="View/MainWindow.xaml">
+             StartupUri="View/MainWindow.xaml"
+    xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
     <Application.Resources>
         <ResourceDictionary Source="Ressources/RessourcesDictionary.xaml">
 
@@ -16,10 +17,12 @@
                 <ResourceDictionary Source="Styles/BtnHambuger.xaml"/>
                 <ResourceDictionary Source="Styles/MenuBtn.xaml"/>
                 <ResourceDictionary Source="Styles/Search.xaml"/>
+                <ResourceDictionary Source="Styles/DataGridStyle.xaml"/>
                 <!--<ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />-->
 
             </ResourceDictionary.MergedDictionaries>
+            
 
 
 
