--- a/CineQuebec.Windows/Styles/MenuBtn.xaml
+++ b/CineQuebec.Windows/Styles/MenuBtn.xaml
@@ -11,6 +11,7 @@
         <Setter Property="Margin" Value="15 3"/>
         <Setter Property="FontSize" Value="13"/>
         <Setter Property="Height" Value="35"/>
+        <Setter Property="FontWeight" Value="DemiBold"/>
 
         <Setter Property="Template">
 
@@ -38,5 +39,47 @@
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Margin" Value="20 2 20 0"/>
     </Style>
+
+
+    <Style x:Key="PagingButton" TargetType="Button">
+
+
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Foreground" Value="#d0c0ff"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+        <Setter Property="Margin" Value="1 0"/>
+        <Setter Property="FontSize" Value="13"/>
+
+
+        <Setter Property="Template">
+
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+
+                    <Border Background="{TemplateBinding Background}" BorderThickness="0 0 0 1" CornerRadius="5" Padding="10 5">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 0 1"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#7950f2"/>
+                <Setter Property="Foreground" Value="#ffffff"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+
+    <Style x:Key="pagingBtnIcon" TargetType="md:PackIcon">
+        <Setter Property="Width" Value="10"/>
+        <Setter Property="Height" Value="10"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+    
+    
+
+
 
 </ResourceDictionary>
