--- a/CineQuebec.Windows/Styles/Search.xaml
+++ b/CineQuebec.Windows/Styles/Search.xaml
@@ -18,7 +18,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="TextBoxBase">
 
-                    <Border x:Name="border" Background="{TemplateBinding Background}" SnapsToDevicePixels="True"
+                    <Border x:Name="border" CornerRadius="20" Background="{TemplateBinding Background}" SnapsToDevicePixels="True"
                             BorderThickness="1" BorderBrush="#e0e6ed">
 
                         <ScrollViewer x:Name="PART_ContHost" Focusable="False" HorizontalScrollBarVisibility="Hidden"
