--- a/CineQuebec.Windows/View/NavWindows.xaml
+++ b/CineQuebec.Windows/View/NavWindows.xaml
@@ -107,18 +107,20 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1*"/>
                     <RowDefinition Height="5*"/>
+                    <RowDefinition Height="80"/>
+                       
                 </Grid.RowDefinitions>
 
                 <Border  />
 
-                <Grid Width="300" HorizontalAlignment="Center">
+                <Grid Width="200" HorizontalAlignment="Right">
                     <!--<Button Content="Déconnexion" Foreground="White" FontWeight="Bold" HorizontalAlignment="Right"  Background="#FF6D6DF3" RenderTransformOrigin="0.151,1.24"/>-->
 
                     <TextBlock Margin="20 0" VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False"
                                Panel.ZIndex="1" Text="Recherche"
                                Visibility="{Binding ElementName=txtSearch, Path=Text.IsEmpty, Converter={StaticResource BoolToVis}}"/>
 
-                    <TextBox x:Name="txtSearch" Style="{StaticResource search_style}" Height="30" Foreground="Black"/>
+                    <TextBox x:Name="txtSearch" Style="{StaticResource search_style}" Height="30" />
 
                     <md:PackIcon Kind="Magnify" Width="15" VerticalAlignment="Center"
                                  Margin="0 0 15 0" Foreground="#b0b9c6" HorizontalAlignment="Right"/>
@@ -128,9 +130,28 @@
 
                 <ContentControl x:Name="mainContentControl" 
                  Grid.Row="1" 
-                 HorizontalAlignment="Right" 
-                 VerticalAlignment="Center" Margin="0,0,346,0" 
+                 HorizontalAlignment="Stretch" 
+                 VerticalAlignment="Stretch" 
+                 Margin="20 0 20 0"
+                                
                  />
+
+                <Border Grid.Row="2" HorizontalAlignment="Right" BorderBrush="#dee4ec" BorderThickness="1"
+                        CornerRadius="5" Padding="5" Background="White" Margin="0 10 10 10" >
+                    <StackPanel Orientation="Horizontal">
+
+                        <Button Style="{StaticResource PagingButton}">
+                            <md:PackIcon Kind="ChevronLeft" Style="{StaticResource pagingBtnIcon}"/>
+                        </Button>
+
+                        <Rectangle Width="1" Fill="#dee4ec" Margin="3 7"/>
+
+                        <Button Style="{StaticResource PagingButton}" Content="1"/>
+                        <Button Style="{StaticResource PagingButton}" Content="2"/>
+                        <Button Style="{StaticResource PagingButton}" Content="3"/>
+                    </StackPanel>
+                    
+                </Border>
             </Grid>
         </Grid>
 
