--- a/CineQuebec.Windows/View/NavWindows.xaml
+++ b/CineQuebec.Windows/View/NavWindows.xaml
@@ -30,9 +30,10 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <Button Margin="20 28 0 35" Style="{StaticResource topButton}">
-                    <md:PackIcon Kind="Menu" Width="15" Height="15"/>
-                </Button>
+                <!--<Button Margin="20 28 0 35" Style="{StaticResource topButton}">
+    <md:PackIcon Kind="Menu" Width="15" Height="15"/>
+</Button>-->
+                
 
 
 
@@ -40,8 +41,8 @@
 
 
                     <DockPanel>
-                        <Border Width="80" Height="80" Padding="3" Background="White" CornerRadius="100"
-                            DockPanel.Dock="Top" HorizontalAlignment="Left" Margin="20 -30 0 0">
+                        <Border Width="80" Height="80"  Padding="3" Background="White" CornerRadius="100"
+                            DockPanel.Dock="Top" HorizontalAlignment="Left" Margin="30 30 0 0">
 
                             <Ellipse>
                                 <Ellipse.Fill>
@@ -69,7 +70,7 @@
                             <Button Style="{StaticResource menuButton}"  Click="ToggleButton_Checked">
                                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                                     <md:PackIcon Kind="Users" Style="{StaticResource menuBtnIcon}"/>
-                                    <TextBlock Text="Abonés" />
+                                    <TextBlock Text="Abonnés" />
                                 </StackPanel>
                             </Button>
 
@@ -135,23 +136,26 @@
                  Margin="20 0 20 0"
                                 
                  />
+                
+                <!--
+                 <Border Grid.Row="2" HorizontalAlignment="Right" BorderBrush="#dee4ec" BorderThickness="1"
+         CornerRadius="5" Padding="5" Background="White" Margin="0 10 10 10" >
+     <StackPanel Orientation="Horizontal">
 
-                <Border Grid.Row="2" HorizontalAlignment="Right" BorderBrush="#dee4ec" BorderThickness="1"
-                        CornerRadius="5" Padding="5" Background="White" Margin="0 10 10 10" >
-                    <StackPanel Orientation="Horizontal">
+         <Button Style="{StaticResource PagingButton}">
+             <md:PackIcon Kind="ChevronLeft" Style="{StaticResource pagingBtnIcon}"/>
+         </Button>
 
-                        <Button Style="{StaticResource PagingButton}">
-                            <md:PackIcon Kind="ChevronLeft" Style="{StaticResource pagingBtnIcon}"/>
-                        </Button>
+         <Rectangle Width="1" Fill="#dee4ec" Margin="3 7"/>
 
-                        <Rectangle Width="1" Fill="#dee4ec" Margin="3 7"/>
-
-                        <Button Style="{StaticResource PagingButton}" Content="1"/>
-                        <Button Style="{StaticResource PagingButton}" Content="2"/>
-                        <Button Style="{StaticResource PagingButton}" Content="3"/>
-                    </StackPanel>
-                    
-                </Border>
+         <Button Style="{StaticResource PagingButton}" Content="1"/>
+         <Button Style="{StaticResource PagingButton}" Content="2"/>
+         <Button Style="{StaticResource PagingButton}" Content="3"/>
+     </StackPanel>
+     
+ </Border>
+                -->
+               
             </Grid>
         </Grid>
 
