--- a/CineQuebec.Windows/View/ConnexionControl.xaml
+++ b/CineQuebec.Windows/View/ConnexionControl.xaml
@@ -4,8 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CineQuebec.Windows.View"
-             xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n">
-    <Grid Background="White" >
+             xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n"
+              Style="{StaticResource Page_Style}">
+    <Grid  >
 
         <StackPanel VerticalAlignment="Center" >
             <Label Content="{x:Static rs:Resource.connexion_username}" 
@@ -19,8 +20,15 @@
                      Style="{StaticResource defautInput}"
                      Margin="0 0 0 20" />
 
-            <Button Content="{x:Static rs:Resource.connexion_connect}" 
-                    Style="{StaticResource defautButton}" Width="100" Click="Button_Click" />
+
+            <StackPanel>
+                <Button Content="{x:Static rs:Resource.connexion_connect}" 
+                Style="{StaticResource defautButton}" Width="100" Click="Button_Click" />
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Vous êtes nouveau?" />
+                    <TextBlock x:Name="btnConnexion" Text=" S'inscrire"  Foreground="Blue" MouseLeftButtonDown="Afficher_form_inscription"/>
+                </StackPanel>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </UserControl>
