--- a/CineQuebec.Windows/View/ConnexionControl.xaml
+++ b/CineQuebec.Windows/View/ConnexionControl.xaml
@@ -5,19 +5,18 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CineQuebec.Windows.View"
              xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n"
-              Style="{StaticResource Page_Style}">
+             >
     <Grid  >
 
         <StackPanel VerticalAlignment="Center" >
-            <Label Content="{x:Static rs:Resource.connexion_username}" 
+            <Label Content="Courriel" 
                    Style="{StaticResource defautLabel}" />
-            <TextBox Width="200"  Style="{StaticResource defautInput}"
+            <TextBox Text="{Binding Email}"  Width="200"  Style="{StaticResource defautInput}"
                      Margin="0 0 0 10"/>
 
             <Label Content="{x:Static rs:Resource.connexion_password}" 
                    Style="{StaticResource defautLabel}" />
-            <TextBox Width="200" 
-                     Style="{StaticResource defautInput}"
+            <PasswordBox x:Name="txtMdP"  Width="200" 
                      Margin="0 0 0 20" />
 
 
