Ajout des formulaires pour creation de la projection et creation des interfaces pour les services

--- a/CineQuebec.Windows/View/FilmsControl.xaml
+++ b/CineQuebec.Windows/View/FilmsControl.xaml
@@ -46,6 +46,10 @@
                                     <Button Style="{StaticResource DataGridDeleteBtn}">
                                         <md:PackIcon Kind="Delete" Foreground="White" Style="{StaticResource DataGridBtnIcon}"/>
                                     </Button>
+
+                                    <Button Style="{StaticResource DataGridAddProjectionBtn}" Click="ToggleButton_AddProjection_Click">
+                                        <md:PackIcon Kind="Plus" Foreground="White" Style="{StaticResource DataGridBtnIcon}"/>
+                                    </Button>
                                 </StackPanel>
                             </DataTemplate>
 
