--- a/CineQuebec.Windows/View/ReadFilmControl.xaml
+++ b/CineQuebec.Windows/View/ReadFilmControl.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="CineQuebec.Windows.View.AddUpdateFilmControl"
+<UserControl x:Class="CineQuebec.Windows.View.ReadFilmControl"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -18,7 +18,7 @@
             </StackPanel>
         </Button>
         <Border Margin="0 20 0 20">
-            <TextBlock x:Name="addUpdateTitle" Foreground="White" HorizontalAlignment="Center" FontSize="20"  />
+            <TextBlock x:Name="readFilmTitle" Text="{Binding FrenchTitle}" Foreground="White" HorizontalAlignment="Center" FontSize="20"  />
         </Border>
 
 
@@ -27,38 +27,32 @@
                 <!-- Titre FR -->
                 <StackPanel Orientation="Horizontal" Margin="10">
                     <Label Content="Titre FR :" />
-                    <TextBox x:Name="titreFr" Text="{Binding FrenchTitle, Mode=TwoWay}" Width="200" />
+                    <TextBlock Text="{Binding FrenchTitle}" Margin="10"/>
                 </StackPanel>
 
                 <!-- Titre original -->
                 <StackPanel Orientation="Horizontal" Margin="10">
                     <Label Content="Titre original :" />
-                    <TextBox x:Name="originalTitle" Text="{Binding OriginalTitle, Mode=TwoWay}" Width="200" />
+                    <TextBlock Text="{Binding OriginalTitle}" Margin="10"/>
                 </StackPanel>
 
                 <!-- Date de sortie internationale -->
                 <StackPanel Orientation="Horizontal" Margin="10">
                     <Label Content="Date de sortie internationale :" />
-                    <DatePicker x:Name="InternationalReleaseDate" SelectedDate="{Binding InternationalReleaseDate, Mode=TwoWay}" />
+                    <TextBlock Text="{Binding InternationalReleaseDate, StringFormat='yyyy-MM-dd'}" Margin="10"/>
                 </StackPanel>
 
                 <!-- Duree du film en minutes -->
                 <StackPanel Orientation="Horizontal" Margin="10">
-                    <Label Content="Duree du film (minutes) :" />
-                    <TextBox x:Name="duration" Text="{Binding Duration, Mode=TwoWay}" Width="200" />
+                    <Label Content="Durée du film (minutes) :" />
+                    <TextBlock Text="{Binding Duration}" Margin="10"/>
                 </StackPanel>
 
                 <!-- Description -->
                 <StackPanel Orientation="Horizontal" Margin="10">
                     <Label Content="Description :" />
-                    <TextBox x:Name="description" Text="{Binding Description, Mode=TwoWay}"  Width="400" Height="100" TextWrapping="Wrap" AcceptsReturn="True" />
+                    <TextBlock Text="{Binding Description}" Margin="10"/>
                 </StackPanel>
-
-                <Button Style="{StaticResource menuButton}" Click="addUpdateButton_Click" HorizontalAlignment="Center" VerticalAlignment="Top" Padding="50" >
-                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                        <TextBlock x:Name="addUpdateButton" Padding="10" />
-                    </StackPanel>
-                </Button>
             </StackPanel>
         </Grid>
     </Grid>
