--- a/CineQuebec.Windows/View/AddProjectionControl.xaml
+++ b/CineQuebec.Windows/View/AddProjectionControl.xaml
@@ -39,7 +39,7 @@
                 <StackPanel Orientation="Horizontal" Margin="10">
                     <Label Content="Salle disponible :" />
                     <ComboBox x:Name="descriptionComboBox" Width="400" Height="100">
-                        <!-- Ajoutez ici les différentes options pour la description -->
+                        <!-- Ajoutez ici les differentes options pour la description -->
                         <ComboBoxItem Content="Option 1" />
                         <ComboBoxItem Content="Option 2" />
                         <ComboBoxItem Content="Option 3" />
